fix: update JWT configuration to read Railway environment variables

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,13 +4,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# JWT
-jwt.secret=${JWT_SECRET}
+# JWT - Reading from Railway environment variables (uppercase)
+jwt.secret=${JWT_SECRET:default-secret-key-please-change}
 jwt.expiration=${JWT_EXPIRATION:900000}
 jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
 
 # Server
 server.port=${PORT:8080}
 
-# CORS - Update with your Vercel URL after frontend deployment
-cors.allowed-origins=https://your-frontend.vercel.app,http://localhost:5173
+# CORS - Allow all origins for now (update after frontend deployment)
+cors.allowed-origins=*
