--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,10 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# JWT - Reading from Railway environment variables (uppercase)
-jwt.secret=${JWT_SECRET:default-secret-key-please-change}
-jwt.expiration=${JWT_EXPIRATION:900000}
-jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
+# JWT - Must match JwtUtils class (@Value annotations)
+app.jwt.secret=${JWT_SECRET:default-secret-key-please-change-in-production}
+app.jwt.expiration-ms=${JWT_EXPIRATION:900000}
+app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION:604800000}
 
 # Server
 server.port=${PORT:8080}
