--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,11 @@
 # Production Configuration
-spring.datasource.url=${DATABASE_URL}
+
+# Database - Railway provides these automatically
+spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/event_db}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
