fix: use Railway's individual PostgreSQL env variables (PGHOST, PGPORT, PGDATABASE)

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,8 @@
 # Production Configuration
 
 # Database - Railway provides these automatically
-spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/event_db}
+# Railway provides: PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:event_db}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
