--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,5 +19,5 @@ app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION:604800000}
 # Server
 server.port=${PORT:8080}
 
-# CORS - Allow all origins for now (update after frontend deployment)
-cors.allowed-origins=*
+# CORS - Allow frontend domain
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:eventconnectbook.netlify.app}
