fix: update CORS to use custom Netlify domain eventconnectbook.netlify.app

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,4 +20,4 @@ app.jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION:604800000}
 server.port=${PORT:8080}
 
 # CORS - Allow frontend domain
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:eventconnectbook.netlify.app}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,https://eventconnectbook.netlify.app}
