--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-
+	<!-- Jackson for Java 8 Date/Time Support -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.datatype</groupId>
+		<artifactId>jackson-datatype-jsr310</artifactId>
+	</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
